--- a/TestWebApi/TestWebApi/TestWebApi.csproj
+++ b/TestWebApi/TestWebApi/TestWebApi.csproj
@@ -214,6 +214,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\ProjectViewModel.cs" />
+    <Compile Include="Models\TaskViewModel.cs" />
     <Compile Include="ParentTask.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -302,7 +304,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
