--- a/myProjectApp/package.json
+++ b/myProjectApp/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.2",
+    "angular-date-value-accessor": "0.0.2",
     "core-js": "^2.5.4",
+    "ng2-datepicker": "^3.1.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
